--- a/project-client/package.json
+++ b/project-client/package.json
@@ -2,9 +2,10 @@
   "name": "frontend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "scripts/models/book.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon scripts/models/book.js"
   },
   "repository": {
     "type": "git",
