--- a/project-client/package.json
+++ b/project-client/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "eslint": "^4.18.2",
     "nodemon": "^1.17.1"
+  },
+  "dependencies": {
+    "superagent": "^3.8.2"
   }
 }
